# os-google-pagerank

./: README.md  pyproject.toml
pagerank/: dataset.py  main.py
pagerank/data/: data.csv
pagerank/models/: pagerank.py
