[tool.poetry]
name = "pagerank"
version = "0.1.0"
description = ""
authors = ["Manuel Martin Morante <manuzombiesbf1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.8"
pandas = "^2.0.2"
numpy = "^1.24.3"

[tool.poetry.scripts]
start = "pagerank.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
